--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "ps-doggo-rating",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx serve doggo-rating-app --configuration=development"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~15.2.0",
@@ -13,7 +15,14 @@
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
+    "@microsoft/signalr": "^7.0.3",
+    "@ngrx/effects": "^15.3.0",
+    "@ngrx/router-store": "^15.3.0",
+    "@ngrx/store": "^15.3.0",
+    "@ngrx/store-devtools": "^15.3.0",
     "@nrwl/angular": "15.8.5",
+    "angular-auth-oidc-client": "^15.0.3",
+    "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
