--- a/m05/end/tsconfig.base.json
+++ b/m05/end/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@ps-doggo-rating/features/about": ["libs/features/about/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
