--- a/m05/end/libs/about/feature/project.json
+++ b/m05/end/libs/about/feature/project.json
@@ -1,15 +1,15 @@
 {
-  "name": "features-about",
+  "name": "about-feature",
   "$schema": "../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
-  "sourceRoot": "libs/features/about/src",
+  "sourceRoot": "libs/about/feature/src",
   "prefix": "ps-doggo-rating",
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/features/about/jest.config.ts",
+        "jestConfig": "libs/about/feature/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
@@ -24,8 +24,8 @@
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
-          "libs/features/about/**/*.ts",
-          "libs/features/about/**/*.html"
+          "libs/about/feature/**/*.ts",
+          "libs/about/feature/**/*.html"
         ]
       }
     }
