--- a/m05/end/tsconfig.base.json
+++ b/m05/end/tsconfig.base.json
@@ -18,7 +18,13 @@
       "@ps-doggo-rating/about/feature": ["libs/about/feature/src/index.ts"],
       "@ps-doggo-rating/auth/api": ["libs/auth/api/src/index.ts"],
       "@ps-doggo-rating/auth/state": ["libs/auth/state/src/index.ts"],
-      "@ps-doggo-rating/auth/util": ["libs/auth/util/src/index.ts"]
+      "@ps-doggo-rating/auth/util": ["libs/auth/util/src/index.ts"],
+      "@ps-doggo-rating/shared/ui-common": [
+        "libs/shared/ui-common/src/index.ts"
+      ],
+      "@ps-doggo-rating/shared/util-common": [
+        "libs/shared/util-common/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
