--- a/m05/end/libs/shared/auth/project.json
+++ b/m05/end/libs/shared/auth/project.json
@@ -1,15 +1,15 @@
 {
-  "name": "auth-ui",
+  "name": "shared-auth",
   "$schema": "../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
-  "sourceRoot": "libs/auth/ui/src",
+  "sourceRoot": "libs/shared/auth/src",
   "prefix": "ps-doggo-rating",
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/auth/ui/jest.config.ts",
+        "jestConfig": "libs/shared/auth/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
@@ -23,7 +23,10 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/auth/ui/**/*.ts", "libs/auth/ui/**/*.html"]
+        "lintFilePatterns": [
+          "libs/shared/auth/**/*.ts",
+          "libs/shared/auth/**/*.html"
+        ]
       }
     }
   },
