--- a/m05/end/tsconfig.base.json
+++ b/m05/end/tsconfig.base.json
@@ -23,6 +23,7 @@
       "@ps-doggo-rating/doggos/domain": ["libs/doggos/domain/src/index.ts"],
       "@ps-doggo-rating/doggos/feature": ["libs/doggos/feature/src/index.ts"],
       "@ps-doggo-rating/doggos/ui": ["libs/doggos/ui/src/index.ts"],
+      "@ps-doggo-rating/shared/auth": ["libs/shared/auth/src/index.ts"],
       "@ps-doggo-rating/shared/environments": [
         "libs/shared/environments/src/index.ts"
       ],
