--- a/m05/end/libs/shared/util-auth/project.json
+++ b/m05/end/libs/shared/util-auth/project.json
@@ -1,15 +1,15 @@
 {
-  "name": "shared-auth",
+  "name": "shared-util-auth",
   "$schema": "../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
-  "sourceRoot": "libs/shared/auth/src",
+  "sourceRoot": "libs/shared/util-auth/src",
   "prefix": "ps-doggo-rating",
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/auth/jest.config.ts",
+        "jestConfig": "libs/shared/util-auth/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
@@ -24,8 +24,8 @@
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
-          "libs/shared/auth/**/*.ts",
-          "libs/shared/auth/**/*.html"
+          "libs/shared/util-auth/**/*.ts",
+          "libs/shared/util-auth/**/*.html"
         ]
       }
     }
