Adding main as default branch

--- a/m04/end/nx.json
+++ b/m04/end/nx.json
@@ -2,7 +2,7 @@
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "npmScope": "ps-doggo-rating",
   "affected": {
-    "defaultBase": "master"
+    "defaultBase": "main"
   },
   "tasksRunnerOptions": {
     "default": {
