--- a/m05/end/doggo-rating-workspace/.eslintrc.json
+++ b/m05/end/doggo-rating-workspace/.eslintrc.json
@@ -15,6 +15,50 @@
               {
                 "sourceTag": "*",
                 "onlyDependOnLibsWithTags": ["*"]
+              },
+              {
+                "sourceTag": "scope:doggo-rating-app",
+                "onlyDependOnLibsWithTags": [
+                  "scope:doggos",
+                  "scope:about",
+                  "scope:shared"
+                ]
+              },
+              {
+                "sourceTag": "scope:about",
+                "onlyDependOnLibsWithTags": ["scope:about", "scope:shared"]
+              },
+              {
+                "sourceTag": "scope:doggos",
+                "onlyDependOnLibsWithTags": ["scope:doggos", "scope:shared"]
+              },
+              {
+                "sourceTag": "scope:shared",
+                "onlyDependOnLibsWithTags": ["scope:shared"]
+              },
+              {
+                "sourceTag": "type:app",
+                "onlyDependOnLibsWithTags": [
+                  "type:feature",
+                  "type:util",
+                  "type:ui"
+                ]
+              },
+              {
+                "sourceTag": "type:feature",
+                "onlyDependOnLibsWithTags": [
+                  "type:domain",
+                  "type:ui",
+                  "type:util"
+                ]
+              },
+              {
+                "sourceTag": "type:ui",
+                "onlyDependOnLibsWithTags": ["type:util", "type:domain"]
+              },
+              {
+                "sourceTag": "type:domain",
+                "onlyDependOnLibsWithTags": ["type:util"]
               }
             ]
           }
