--- a/m05/end/doggo-rating-workspace/.vscode/settings.json
+++ b/m05/end/doggo-rating-workspace/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
-  "editor.codeActionsOnSave": {
-    "source.organizeImports": true,
-    "source.fixAll.eslint": true
-  },
-  "editor.formatOnSave": true,
-  "editor.formatOnPaste": true,
+  // "editor.codeActionsOnSave": {
+  //   "source.organizeImports": true,
+  //   "source.fixAll.eslint": true
+  // },
+  // "editor.formatOnSave": true,
+  // "editor.formatOnPaste": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
