--- a/m05/live/doggo-rating-workspace/.vscode/settings.json
+++ b/m05/live/doggo-rating-workspace/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
