--- a/m05/live/doggo-rating-workspace/.eslintrc.json
+++ b/m05/live/doggo-rating-workspace/.eslintrc.json
@@ -13,12 +13,53 @@
             "allow": [],
             "depConstraints": [
               {
-                "sourceTag": "*",
-                "onlyDependOnLibsWithTags": ["*"]
+                "sourceTag": "scope:doggo-rating-app",
+                "onlyDependOnLibsWithTags": [
+                  "scope:doggos",
+                  "scope:about",
+                  "scope:shared"
+                ]
+              },
+              {
+                "sourceTag": "scope:about",
+                "onlyDependOnLibsWithTags": ["scope:about", "scope:shared"]
+              },
+              {
+                "sourceTag": "scope:doggos",
+                "onlyDependOnLibsWithTags": ["scope:doggos", "scope:shared"]
+              },
+              {
+                "sourceTag": "scope:shared",
+                "onlyDependOnLibsWithTags": ["scope:shared"]
+              },
+              {
+                "sourceTag": "type:app",
+                "onlyDependOnLibsWithTags": [
+                  "type:feature",
+                  "type:util",
+                  "type:ui"
+                ]
+              },
+              {
+                "sourceTag": "type:feature",
+                "onlyDependOnLibsWithTags": [
+                  "type:domain",
+                  "type:util",
+                  "type:ui"
+                ]
+              },
+              {
+                "sourceTag": "type:ui",
+                "onlyDependOnLibsWithTags": ["type:domain", "type:util"]
+              },
+              {
+                "sourceTag": "type:domain",
+                "onlyDependOnLibsWithTags": ["type:util"]
               }
             ]
           }
-        ]
+        ],
+        "@typescript-eslint/no-useless-constructor": ["error"]
       }
     },
     {
